viewer/bridge/tidyvnc.h

/* Internal versioned ABI. All calls are thread-safe and nonblocking with respect
 * to protocol work; create may allocate/start threads. No caller thread joins.
 * IDs are opaque, process-local, typed by the implementation, and never reused.
 * Each returned handle owns one reference; retain/release on any thread. Keep a
 * reference throughout each call and while using borrowed spans. A final session
 * release initiates close; a final runtime release initiates shutdown. Draining
 * is explicit and can be polled without waiting. Invalid IDs are rejected.
 *
 * Caller pointers must address accessible memory for their declared lengths;
 * the ABI validates null/length/overflow, not arbitrary address accessibility.
 * Initialize every struct to zero, then set size=sizeof(struct), version=1.
 * Larger structs are accepted: known input reserved fields must be zero; unknown tail
 * bytes are ignored and never written. Unsupported versions/mandatory flags fail.
 * Outputs remain unchanged on failure/NO_CHANGE/PENDING, except optional errors.
 * Output handles must be released before overwriting their storage on a new call.
 */
typedef uint64_t tidyvnc_handle;
typedef struct { const uint8_t* data; uint64_t length; } tidyvnc_bytes;
typedef struct {
  char host[64]; /* Copied numeric host, including any numeric IPv6 scope. */
  uint32_t port, reserved;
} tidyvnc_listener_address;
typedef struct {
  uint32_t size, version, state, error;
  int32_t native_error;
  uint32_t pending, address_count, reserved;
  tidyvnc_listener_address addresses[2];
} tidyvnc_listener_snapshot;
typedef struct {
  uint32_t size, version, kind, reserved;
  uint64_t sequence, incoming_id; /* Zero incoming_id for state events. */
  tidyvnc_listener_address peer;
  tidyvnc_listener_snapshot snapshot;
} tidyvnc_listener_event;
typedef struct {
  uint32_t size, version;
  uint32_t security_count, security_types[32]; /* Explicit allow-list; empty denies all. */
  uint32_t prompt_timeout_ms, event_capacity, command_capacity, reserved;
  uint64_t framebuffer_bytes, publication_bytes;
  tidyvnc_bytes tls_priority, ca_file, crl_file; /* UTF-8; copied before return. Explicit CA/CRL files must load during X509 TLS setup. */
} tidyvnc_session_options;
typedef struct {
  uint32_t size, version, pointer_interval_ms, reserved;
} tidyvnc_input_timing;
typedef struct {
  uint32_t size, version, max_cut_text, reserved;
} tidyvnc_message_limits;
typedef struct {
  uint32_t size, version, flags, reserved;
  int32_t width, height, x, y;
} tidyvnc_window_geometry;
typedef struct {
  uint32_t size, version, ipv4, ipv6;
  uint32_t resolve_timeout_ms, connect_timeout_ms, address_timeout_ms, reserved;
  tidyvnc_bytes endpoint; /* Shared viewer address syntax, max 4096 bytes. */
} tidyvnc_connect_options;
typedef struct {
  uint32_t size, version;
  uint64_t operation, generation;
} tidyvnc_operation;
typedef struct {
  uint32_t size, version, state, end_reason;
  int32_t native_error; uint32_t width, height, supports_resize, resize_pending, reserved;
  uint64_t generation, frames, bells;
} tidyvnc_snapshot;
/* Remote pixels and RFB identities, never local monitor indices/OS objects. */
typedef struct { uint32_t id, x, y, width, height, flags; } tidyvnc_remote_screen;
typedef struct {
  uint32_t size, version, width, height, screen_count, reserved;
  const tidyvnc_remote_screen* screens; /* Borrowed for the call; 1..255. */
} tidyvnc_desktop_layout_request;
typedef struct {
  uint32_t size, version, screen_count, reserved;
  tidyvnc_snapshot snapshot; /* Geometry/capability from the same publication. */
  tidyvnc_remote_screen screens[255]; /* Owned copy; unused entries zeroed. */
} tidyvnc_desktop_layout;
/* Local monitor geometry. IDs are caller-owned mapping tokens, not RFB IDs.
 * Logical coordinates are integral points, top-left origin, positive Y down.
 * Bounds and backing dimensions are checked before any coordinate arithmetic. */
typedef struct {
  uint32_t id;
  int32_t x, y;
  uint32_t width, height, backing_width, backing_height;
} tidyvnc_display_monitor;
typedef struct {
  uint32_t size, version, monitor_count, device_pixels;
  const tidyvnc_display_monitor* monitors; /* Borrowed for the call; 1..64. */
} tidyvnc_display_layout_request;
typedef struct {
  uint32_t size, version, width, height, screen_count, normalized;
  tidyvnc_remote_screen screens[64]; /* IDs echo mapping tokens; flags are zero. */
} tidyvnc_display_layout;
typedef struct {
  uint32_t size, version, protocol_major, protocol_minor;
  uint32_t security_type, credentials_secure, name_truncated, reserved;
  int32_t requested_encoding, last_encoding; /* -1 means no data encoding yet. */
  uint64_t bits_per_second;
  tidyvnc_snapshot snapshot; /* Counters/state from the same publication as metadata. */
  /* All text is copied and NUL terminated. Name is at most 1024 server-provided
   * bytes; UTF-8 may be incomplete if name_truncated is set. Other text is ASCII. */
  /* credentials_secure is the existing authentication policy result, not a
   * claim that all desktop traffic is encrypted or that identity was verified. */
  char desktop_name[1025], pixel_format[128], security_name[64];
  char requested_encoding_name[32], last_encoding_name[32];
} tidyvnc_connection_info;
typedef struct {
  uint32_t size, version, kind, result, failure, native_result;
  uint64_t sequence, operation, origin;
  tidyvnc_snapshot snapshot;
} tidyvnc_event;
typedef struct {
  uint32_t size, version, frame_changed, cursor_changed;
  uint64_t generation;
  tidyvnc_handle frame, cursor; /* Each nonzero handle owns a reference. */
  uint32_t damage_x, damage_y, damage_width, damage_height;
} tidyvnc_view_update;
typedef struct {
  uint32_t size, version, width, height, format, alpha, origin, reserved;
  uint64_t stride, generation, size_generation, sequence;
  uint32_t hotspot_x, hotspot_y;
  tidyvnc_bytes pixels; /* Borrowed from the image handle, immutable. */
} tidyvnc_image_info;
typedef struct {
  uint32_t size, version, kind, secure, username_required, certificate_status;
  uint64_t id, generation;
  tidyvnc_bytes server_name, identity, fingerprint; /* Borrowed from prompt handle. */
} tidyvnc_prompt_info;
/* Optional certificate-key support is advertised only with TLS support.
 * Immutable handles own exact DER SPKI bytes. No filesystem IO. All outputs stay
 * unchanged on failure; the key span is borrowed until the handle is released. */
typedef struct { uint32_t size, version; tidyvnc_bytes spki; } tidyvnc_certificate_key_info;
typedef struct { uint32_t size, version, length, reserved; uint8_t bytes[64]; } tidyvnc_key_digest;
typedef struct {
  uint32_t size, version, reasons, fatal_status, may_override, reserved;
} tidyvnc_certificate_policy;
/* Readiness only: no borrowed payload pointers escape a callback. Notifications
 * coalesce; on each wake drain event/view/prompt/clipboard mailboxes and check session
 * drain. One subscription per session, at most 512 in the process. All ready
 * callbacks run serially on one bridge dispatcher, outside bridge/core locks;
 * return promptly. Never throw. Reentrant ABI calls, including unsubscribe and
 * release of already-owned handles, are allowed. The subscription ID is borrowed.
 * An initial callback may run before subscribe returns; use its ID, not the
 * caller's output storage. Retain that ID if it must outlive this callback.
 *
 * retain_context runs once on the subscribing thread before publication;
 * release_context runs once after the last callback on the dispatcher (or on
 * the caller if subscription fails). Both must return promptly and never throw.
 * The context pointer may be null; all three function pointers are required.
 */
typedef struct {
  uint32_t size, version;
  void* context;
  void (*retain_context)(void*);
  void (*release_context)(void*);
  void (*ready)(void*, tidyvnc_handle subscription, uint64_t generation);
  uint64_t reserved;
} tidyvnc_callbacks;
typedef struct {
  uint32_t size, version, mode, x, y, fits;
  char canonical[64];
} tidyvnc_scaling;
typedef struct {
  uint32_t size, version, width, height, quality, reserved;
  uint32_t x, y, tile_width, tile_height;
  uint64_t previous_sequence;
  uint32_t damage_x, damage_y, damage_width, damage_height;
} tidyvnc_tile_options;
typedef struct {
  uint32_t size, version, cache_hit, reserved;
  uint64_t cache_bytes;
} tidyvnc_tile_result;
typedef struct {
  uint32_t size, version, quality, reserved;
  double scale_x, scale_y;
} tidyvnc_cursor_options;
typedef struct {
  uint32_t size, version, width, height, hotspot_x, hotspot_y;
  uint32_t blank, reserved; /* blank means every source alpha is zero. */
  uint64_t source_bytes;
} tidyvnc_cursor_geometry;
typedef struct {
  uint32_t size, version, x, y, width, height, reserved[2];
} tidyvnc_cursor_tile;
/* Immutable transform request, using the shared scaling parser/geometry.
 * Coordinates are host logical units, origin/top-left; units=0 logical, 1 device
 * pixels for explicit scaling sizes. Fit modes always fit the logical viewport.
 * Scaling text uses the existing eight-mode syntax, max 64 UTF-8 bytes. */
typedef struct {
  uint32_t size, version, remote_width, remote_height, units, reserved;
  double viewport_width, viewport_height, backing_scale, pan_x, pan_y;
  tidyvnc_bytes scaling;
} tidyvnc_geometry_options;
typedef struct {
  uint32_t size, version, backing_width, backing_height;
  double x, y, width, height;
  int32_t remote_x, remote_y;
} tidyvnc_geometry;
/* One enclosed region of a shared fullscreen canvas, in the geometry option's
 * selected logical/device units. Dimensions are 1..65535. Viewport dimensions
 * still describe this local view; fitting uses the entire canvas. */
typedef struct {
  uint32_t size, version, width, height, x, y, region_width, region_height;
} tidyvnc_canvas_viewport;
/* Remote source damage and filter halo, mapped by the shared transform. */
typedef struct {
  uint32_t size, version, x, y, width, height, quality, reserved;
} tidyvnc_damage;
typedef struct {
  uint32_t size, version;
  double x, y, width, height;
} tidyvnc_rectangle;
/* Clipboard tokens are advisory, not locks: the host must serialize focus and
 * native writes, rechecking this token immediately before a pasteboard write.
 * Any generation/focus/view-only/policy transition invalidates old tokens. */
typedef struct {
  uint32_t size, version;
  tidyvnc_handle session; /* Identity only: no owning reference. */
  uint64_t generation, focus_revision, policy_revision;
} tidyvnc_clipboard_route;
typedef struct {
  uint32_t size, version, kind, result; /* result is a tidyvnc_status. */
  uint64_t sequence;
  tidyvnc_clipboard_route route;
  tidyvnc_handle text; /* Nonzero owns an immutable text lease, release normally. */
} tidyvnc_clipboard_update;
typedef struct {
  uint32_t size, version, from_remote, reserved;
  tidyvnc_clipboard_route route;
  tidyvnc_bytes text; /* Borrowed UTF-8/LF text while its lease is retained. */
} tidyvnc_clipboard_info;