platform/windows/TidyVNC.Native/Bridge/Interop.g.cs


[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_listener_event
{
    public uint size;
    public uint version;
    public uint kind;
    public uint reserved;
    public ulong sequence;
    public ulong incoming_id;
    public tidyvnc_listener_address peer;
    public tidyvnc_listener_snapshot snapshot;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_session_options
{
    public uint size;
    public uint version;
    public uint security_count;
    public fixed uint security_types[32];
    public uint prompt_timeout_ms;
    public uint event_capacity;
    public uint command_capacity;
    public uint reserved;
    public ulong framebuffer_bytes;
    public ulong publication_bytes;
    public tidyvnc_bytes tls_priority;
    public tidyvnc_bytes ca_file;
    public tidyvnc_bytes crl_file;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_input_timing
{
    public uint size;
    public uint version;
    public uint pointer_interval_ms;
    public uint reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_message_limits
{
    public uint size;
    public uint version;
    public uint max_cut_text;
    public uint reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_window_geometry
{
    public uint size;
    public uint version;
    public uint flags;
    public uint reserved;
    public int width;
    public int height;
    public int x;
    public int y;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_connect_options
{
    public uint size;
    public uint version;
    public uint ipv4;
    public uint ipv6;
    public uint resolve_timeout_ms;
    public uint connect_timeout_ms;
    public uint address_timeout_ms;
    public uint reserved;
    public tidyvnc_bytes endpoint;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_operation
{
    public uint size;
    public uint version;
    public ulong operation;
    public ulong generation;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_snapshot
{
    public uint size;
    public uint version;
    public uint state;
    public uint end_reason;
    public int native_error;
    public uint width;
    public uint height;
    public uint supports_resize;
    public uint resize_pending;
    public uint reserved;
    public ulong generation;
    public ulong frames;
    public ulong bells;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_remote_screen
{
    public uint id;
    public uint x;
    public uint y;
    public uint width;
    public uint height;
    public uint flags;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_desktop_layout_request
{
    public uint size;
    public uint version;
    public uint width;
    public uint height;
    public uint screen_count;
    public uint reserved;
    public tidyvnc_remote_screen* screens;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_desktop_layout
{
    public uint size;
    public uint version;
    public uint screen_count;
    public uint reserved;
    public tidyvnc_snapshot snapshot;
    public tidyvnc_remote_screen_Array255 screens;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_display_monitor
{
    public uint id;
    public int x;
    public int y;
    public uint width;
    public uint height;
    public uint backing_width;
    public uint backing_height;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_display_layout_request
{
    public uint size;
    public uint version;
    public uint monitor_count;
    public uint device_pixels;
    public tidyvnc_display_monitor* monitors;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_display_layout
{
    public uint size;
    public uint version;
    public uint width;
    public uint height;
    public uint screen_count;
    public uint normalized;
    public tidyvnc_remote_screen_Array64 screens;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_connection_info
{
    public uint size;
    public uint version;
    public uint protocol_major;
    public uint protocol_minor;
    public uint security_type;
    public uint credentials_secure;
    public uint name_truncated;
    public uint reserved;
    public int requested_encoding;
    public int last_encoding;
    public ulong bits_per_second;
    public tidyvnc_snapshot snapshot;
    public fixed byte desktop_name[1025];
    public fixed byte pixel_format[128];
    public fixed byte security_name[64];
    public fixed byte requested_encoding_name[32];
    public fixed byte last_encoding_name[32];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_event
{
    public uint size;
    public uint version;
    public uint kind;
    public uint result;
    public uint failure;
    public uint native_result;
    public ulong sequence;
    public ulong operation;
    public ulong origin;
    public tidyvnc_snapshot snapshot;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_view_update
{
    public uint size;
    public uint version;
    public uint frame_changed;
    public uint cursor_changed;
    public ulong generation;
    public ulong frame;
    public ulong cursor;
    public uint damage_x;
    public uint damage_y;
    public uint damage_width;
    public uint damage_height;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_image_info
{
    public uint size;
    public uint version;
    public uint width;
    public uint height;
    public uint format;
    public uint alpha;
    public uint origin;
    public uint reserved;
    public ulong stride;
    public ulong generation;
    public ulong size_generation;
    public ulong sequence;
    public uint hotspot_x;
    public uint hotspot_y;
    public tidyvnc_bytes pixels;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_prompt_info
{
    public uint size;
    public uint version;
    public uint kind;
    public uint secure;
    public uint username_required;
    public uint certificate_status;
    public ulong id;
    public ulong generation;
    public tidyvnc_bytes server_name;
    public tidyvnc_bytes identity;
    public tidyvnc_bytes fingerprint;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_certificate_key_info
{
    public uint size;
    public uint version;
    public tidyvnc_bytes spki;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_key_digest
{
    public uint size;
    public uint version;
    public uint length;
    public uint reserved;
    public fixed byte bytes[64];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_certificate_policy
{
    public uint size;
    public uint version;
    public uint reasons;
    public uint fatal_status;
    public uint may_override;
    public uint reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_callbacks
{
    public uint size;
    public uint version;
    public void* context;
    public delegate* unmanaged[Cdecl]<void*, void> retain_context;
    public delegate* unmanaged[Cdecl]<void*, void> release_context;
    public delegate* unmanaged[Cdecl]<void*, ulong, ulong, void> ready;
    public ulong reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_scaling
{
    public uint size;
    public uint version;
    public uint mode;
    public uint x;
    public uint y;
    public uint fits;
    public fixed byte canonical[64];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_tile_options
{
    public uint size;
    public uint version;
    public uint width;
    public uint height;
    public uint quality;
    public uint reserved;
    public uint x;
    public uint y;
    public uint tile_width;
    public uint tile_height;
    public ulong previous_sequence;
    public uint damage_x;
    public uint damage_y;
    public uint damage_width;
    public uint damage_height;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_tile_result
{
    public uint size;
    public uint version;
    public uint cache_hit;
    public uint reserved;
    public ulong cache_bytes;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_cursor_options
{
    public uint size;
    public uint version;
    public uint quality;
    public uint reserved;
    public double scale_x;
    public double scale_y;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_cursor_geometry
{
    public uint size;
    public uint version;
    public uint width;
    public uint height;
    public uint hotspot_x;
    public uint hotspot_y;
    public uint blank;
    public uint reserved;
    public ulong source_bytes;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_cursor_tile
{
    public uint size;
    public uint version;
    public uint x;
    public uint y;
    public uint width;
    public uint height;
    public fixed uint reserved[2];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_geometry_options
{
    public uint size;
    public uint version;
    public uint remote_width;
    public uint remote_height;
    public uint units;
    public uint reserved;
    public double viewport_width;
    public double viewport_height;
    public double backing_scale;
    public double pan_x;
    public double pan_y;
    public tidyvnc_bytes scaling;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_geometry
{
    public uint size;
    public uint version;
    public uint backing_width;
    public uint backing_height;
    public double x;
    public double y;
    public double width;
    public double height;
    public int remote_x;
    public int remote_y;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_canvas_viewport
{
    public uint size;
    public uint version;
    public uint width;
    public uint height;
    public uint x;
    public uint y;
    public uint region_width;
    public uint region_height;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_damage
{
    public uint size;
    public uint version;
    public uint x;
    public uint y;
    public uint width;
    public uint height;
    public uint quality;
    public uint reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_rectangle
{
    public uint size;
    public uint version;
    public double x;
    public double y;
    public double width;
    public double height;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_clipboard_route
{
    public uint size;
    public uint version;
    public ulong session;
    public ulong generation;
    public ulong focus_revision;
    public ulong policy_revision;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_clipboard_update
{
    public uint size;
    public uint version;
    public uint kind;
    public uint result;
    public ulong sequence;
    public tidyvnc_clipboard_route route;
    public ulong text;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_clipboard_info
{
    public uint size;
    public uint version;
    public uint from_remote;
    public uint reserved;
    public tidyvnc_clipboard_route route;
    public tidyvnc_bytes text;
}
